# PIE-Handmaking_LLM

./: .gitignore  README.md  README_zh.md  requirements.txt
Chinese/: config_zh.yaml
Chinese/src/: dataprocess.py  inference.py  model.py  tokenizer.py  train.py
Chinese/src/custom_bpe/: Cargo.toml  pyproject.toml
Chinese/src/custom_bpe/src/: encode.rs  engine.rs  lib.rs
English/: config_en.yaml
English/src/: dataprocess.py  inference.py  model.py  tokenizer.py  train.py
English/src/custom_bpe/: Cargo.toml
English/src/custom_bpe/src/: decode.rs  encode.rs  engine.rs  lib.rs
Tokenizer/: merges.txt  tokenizer_32128.json  vocab_readable.tsv
